--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 @font-face {
     font-family: low-text;
-    src: url(../sundown-studio/font/NHaasGroteskTXPro-55Rg.ttf);
+    src: url(../font/NHaasGroteskTXPro-55Rg.ttf);
 }
+
 @font-face {
     font-family: med-text;
-    src: url(../sundown-studio/font/NHaasGroteskTXPro-65Md.ttf);
+    src: url(../font/NHaasGroteskTXPro-65Md.ttf);
 }
 
 * {
@@ -12,14 +13,16 @@
     padding: 0;
     box-sizing: border-box;
 }
-html,body{
+
+html,
+body {
     height: 100%;
-    width : 100%;
+    width: 100%;
     /* background-color : black; */
     /* font-family: ; */
 }
 
-.loder{
+.loder {
     height: 100%;
     width: 100%;
     position: fixed;
@@ -30,7 +33,7 @@ html,body{
     background-color: black;
 }
 
-.loder h1{
+.loder h1 {
     font-family: "med-text";
     background-image: linear-gradient(200deg, #FE330A, #FF9832);
     color: transparent;
@@ -40,55 +43,59 @@ html,body{
     opacity: 0;
 }
 
-.loder h1:nth-child(1){
+.loder h1:nth-child(1) {
     animation: lode 1s 1s;
 }
 
-.loder h1:nth-child(2){
+.loder h1:nth-child(2) {
     animation: lode 1s 2s;
 }
 
-.loder h1:nth-child(3){
+.loder h1:nth-child(3) {
     animation: lode 1s 3s;
 }
 
 @keyframes lode {
-    0%{
+    0% {
         opacity: 0;
     }
-    10%{
+
+    10% {
         opacity: 1;
     }
-    90%{
+
+    90% {
         opacity: 1;
     }
-    100%{
+
+    100% {
         opacity: 0%;
     }
-    
+
 }
 
 
 
 /* page1  */
-.page1{
-    height: 85vh;
-    width: 100vw;
+.page1 {
+    min-height: 100vh;
+    width: 100%;
+    padding-inline: 32px;
     background-color: #EFEAE3;
     position: relative;
 }
 
-nav{
+nav {
     height: 100px;
     padding-top: 32px;
-    padding-inline: 32px;
+    /* padding-inline: 32px; */
     width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.nav-right{
+.nav-right {
     width: 25vw;
     display: flex;
     justify-content: space-evenly;
@@ -96,7 +103,7 @@ nav{
     text-align: center;
 }
 
-.nav-right h4{
+.nav-right h4 {
     padding: 10px 20px;
     border: 1px solid #C1BCB5;
     border-radius: 50px;
@@ -108,7 +115,7 @@ nav{
     transition: all ease 0.4s;
 }
 
-.nav-right h4::after{
+.nav-right h4::after {
     content: "";
     position: absolute;
     mix-blend-mode: normal;
@@ -121,57 +128,199 @@ nav{
     transition: all ease 0.4s;
 }
 
-.nav-right h4:hover::after{
-    bottom:0;
+.nav-right h4:hover::after {
+    bottom: 0;
     border-radius: 0;
 }
 
-.nav-right h4:hover a{
+.nav-right h4:hover a {
     color: white;
 }
-.nav-right h4 a{
+
+.nav-right h4 a {
     position: relative;
     text-decoration: none;
     color: #000000bb;
     z-index: 9;
 }
 
-.page1 .intro{
-    height: calc(100% - 100px);
-    margin-inline: 32px;
+.page1 .intro {
+    height: 75vh;
+    /* margin-inline: 32px; */
     border-bottom: 1.5px solid #C1BCB5;
     display: flex;
     justify-content: space-between;
-    padding-bottom: 40px;
+    padding-bottom: 3vw;
 
 }
-#left,#right{
+
+#left,
+#right {
     display: flex;
     align-items: flex-end;
 }
 
-.intro #left h4{
-    width: 25vw;
+.intro #left h4 {
+    width: 30vw;
     font-family: "med-text";
-    font-size: 1.5vw;
-    line-height: 1.5vw;
+    font-size: 1.8vw;
+    line-height: 2vw;
+    letter-spacing: -0.5px;
 }
 
-.intro #right h1{
+.intro #right h1 {
     font-family: "med-text";
-    font-size: 8vw;
-    line-height: 7vw;
+    font-size: 10vw;
+    line-height: 9vw;
     text-transform: uppercase;
     text-align: right;
 }
 
-.page2{
-    height: 100vh;
-    width: 100vw;
-    background-color: #EFEAE3;
+.page1 video {
     position: relative;
+    width: 100%;
+    /* padding-inline: 32px; */
+    border-radius: 30px;
+    margin-top: 4vw;
+    z-index:22 ;
 }
 
+.page1 .shape {
+    width: 60vw;
+    height: 40vw;
+    position: absolute;
+    right: 0;
+    top: 60vh;
+    overflow: hidden;
+    /* background-color: #FE330A; */
+    background: transparent;
+    /* z-index: 99; */
+}
+
+.shape .shape-1 {
+    width: 40vw;
+    height: 30vw;
+    position: absolute;
+    right: 0;
+    top: 8vw;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    overflow: hidden;
+    z-index: 1;
+    filter: blur(20px);
+    background: rgb(254, 51, 10);
+    background: radial-gradient(circle, rgba(254, 51, 10, 1) 0%, rgba(254, 67, 16, 0.6895133053221288) 100%, rgba(255, 152, 50, 1) 100%);
+    animation: anime2 4s linear infinite;
+    animation-direction: alternate;
+}
+
+.shape .shape-2 {
+    width: 50vw;
+    height: 50vw;
+    position: absolute;
+    right: 0;
+    top: 20vw;
+    right: 30vw;
+    border-radius: 50%;
+    filter: blur(20px);
+    z-index: 1;
+    /* background-color: blue; */
+    background: rgb(254, 51, 10);
+    background: linear-gradient(90deg, rgba(254, 51, 10, 1) 0%, rgba(254, 67, 16, 1) 34%, rgba(255, 152, 50, 1) 81%);
+    animation: ani1 4s linear infinite;
+    animation-direction: alternate;
+}
+
+.shape .shape-3 {
+    width: 35vw;
+    height: 35vw;
+    filter: blur(20px);
+    right: 0;
+    /* background-color: pink; */
+    background: rgb(254, 51, 10);
+    background: radial-gradient(circle, rgba(254, 51, 10, 1) 13%, rgba(254, 67, 16, 1) 34%, rgba(255, 152, 50, 1) 81%);
+    border-radius: 50px;
+    position: absolute;
+    top: 20vh;
+}
+
+@keyframes ani1 {
+    from {
+        transform: translate(50%, -9%);
+    }
+
+    to {
+        transform: translate(0%, 10%);
+    }
+}
+
+@keyframes anime2 {
+    from {
+        transform: translate(0%, 0%) rotate(90deg);
+    }
+
+    to {
+        transform: translate(0%, 0%) rotate(0deg);
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+.page2{
+    height: 100vh;
+    width: 100%;
+    background-color: #EFEAE3;
+    position: relative;
+    padding: 4vw 0;
+}
+
+#moving-text {
+    overflow-x: auto;
+    white-space: nowrap;
+}
+
+#moving-text::-webkit-scrollbar {
+    display: none;
+}
+
+.con {
+    white-space: nowrap;
+    display: inline-block;
+    animation: move 10s linear infinite;
+}
+
+#moving-text h1 {
+    font-family: "med-text";
+    font-size: 8vw;
+    display: inline-block;
+}
+
+#gola {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    display: inline-block;
+    background-color: #FE320A;
+    margin: 1vw 2vw;
+}
+
+@keyframes move{
+    0%{
+        transform: translateX(0%);
+    }
+    100%{
+        transform: translateX(-100%);
+    }
+}
 
 
 
@@ -187,7 +336,7 @@ nav{
 
 
 @media (max-width:600px) {
-    .loder h1{
+    .loder h1 {
         font-size: 2em;
     }
 }
