--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html,
 body {
     height: 100%;
     width: 100%;
+    color: #0b0500;
     /* background-color : black; */
     /* font-family: ; */
 }
@@ -180,7 +181,7 @@ nav {
     position: relative;
     width: 100%;
     /* padding-inline: 32px; */
-    border-radius: 30px;
+    border-radius: 20px;
     margin-top: 4vw;
     z-index:22 ;
 }
@@ -325,7 +326,6 @@ nav {
 .page2-bottom{
     height: 100vh;
     width: 100%;
-    background-color: #FE330A;
     padding-inline: 32px;
     display: flex;
 }
@@ -335,12 +335,14 @@ nav {
     display: flex;
     flex-direction: column;
     padding-inline: 30px;
-    background-color: antiquewhite;
 }
 
 .b-left .text{
+    position: absolute;
     height: 90%;
+    width: 50%;
     margin: 1.5vw 1.5vw;
+    z-index: 9;
 }
 
 .b-left .text h1{
@@ -351,7 +353,57 @@ nav {
     line-height: 4vw;
 }
 
+.shape-s1{
+    height: 35vw;
+    width: 35vw;
+    border-radius: 50%;
+    filter: blur(20px);
+    background: rgb(255, 123, 52);
+    background: linear-gradient(90deg, rgba(254, 51, 10, 1) 0%, rgba(254, 67, 16, 1) 34%, rgba(255, 152, 50, 1) 81%);
+    position: absolute;
+    top: 45%;
+    left:24%;
+    animation: loopshape2 4s linear infinite;
+    animation-direction: alternate;
+}
+
+.shape-s2{
+    height: 32vw;
+    width: 32vw;
+    border-radius: 50%;
+    filter: blur(20px);
+    background: rgb(254, 51, 10);
+    position: absolute;
+    top: 50%;
+    left:20%;
+    animation: loopshape2 4s linear infinite;
+    animation-direction: alternate;
+}
+
+
+@keyframes loopshape1 {
+    from{
+        transform: translate(7%,-7%)skew(0deg);
+    }
+    to{
+        transform: translate(-5%,5%)skew(10deg);
+    }
+    
+}
+
+@keyframes loopshape2 {
+    from{
+        transform: translate(5%,-5%)skew(10deg);
+    }
+    to{
+        transform: translate(-5%,5%)skew(0deg);
+    }
+    
+}
+
 .b-left h5{
+    position: absolute;
+    bottom: 2vw;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -363,14 +415,15 @@ nav {
 .b-left h5 #round{
     height: 8px;
     width: 8px;
-    background-color: #FE320A;
+    background-color: #FE330A;
     border-radius: 50%;
 }
+
+
 
 .b-right{
     height: 100%;
     width: 36%;
-    background-color: rgb(176, 114, 33);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -378,10 +431,14 @@ nav {
     align-items: center;
 }
 
+.b-right .images{
+    margin-top:250px;
+}
+
 .b-right .images img{
-    height: 250px;
-    width: 350px;
-    background-color: #FE320A;
+    /* margin-top: vw; */
+    height: 200px;
+    width: 300px;
     border-radius: 30px;
     background-position: center;
     object-fit: cover;
@@ -396,7 +453,91 @@ nav {
 }
 
 
+/* page3 */
 
+.page3{
+    min-height: 100vh;
+    width: 100%;
+    min-height: 100vh;
+    width: 100%;
+    background-color: #EFEAE3;
+    position: relative;
+}
+ 
+.page3 .elem{
+    padding-inline: 3vw;
+    height: 15vh;
+    width: 100%;
+    border-bottom: 1px solid #908C89;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.elem h1{
+    font-family: "med-text";
+    font-size: 3.5vw;
+    text-transform: uppercase;
+}
+
+.elem .elem-right h5{
+    text-transform: uppercase;
+    font-family: "low-text";
+    font-size: 1.2vw;
+    text-align: right;
+}
+.elem .elem-right h5:nth-child(2){
+    color: #908C89;
+    font-size: 0.9vw;
+}
+
+.page3-button{
+    padding: 2vw 2vw;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.page3 h4 {
+    padding: 10px 20px;
+    border: 1px solid #C1BCB5;
+    border-radius: 50px;
+    position: relative;
+    font-family: "low-text";
+    font-size: 1.1vw;
+    font-weight: lighter;
+    overflow: hidden;
+    transition: all ease 0.4s;
+}
+
+.page3 h4::after {
+    content: "";
+    position: absolute;
+    mix-blend-mode: normal;
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    left: 0;
+    bottom: -100%;
+    border-radius: 50%;
+    transition: all ease 0.4s;
+}
+
+.page3 h4:hover::after {
+    bottom: 0;
+    border-radius: 0;
+}
+
+.page3 h4:hover a {
+    color: white;
+}
+
+.page3 h4 a {
+    position: relative;
+    text-decoration: none;
+    color: #000000bb;
+    z-index: 9;
+}
 
 
 
