page4 most of done

--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 @font-face {
     font-family: low-text;
-    src: url(../font/NHaasGroteskTXPro-55Rg.ttf);
+    src: url(./font/NHaasGroteskTXPro-55Rg.ttf);
 }
 
 @font-face {
     font-family: med-text;
-    src: url(../font/NHaasGroteskTXPro-65Md.ttf);
+    src: url(./font/NHaasGroteskTXPro-65Md.ttf);
 }
 
 * {
@@ -19,7 +19,7 @@ body {
     height: 100%;
     width: 100%;
     color: #0b0500;
-    /* background-color :#EFEAE3; */
+    background-color :#EFEAE3;
     /* font-family: ; */
 }
 
@@ -580,13 +580,114 @@ nav {
     width: 100%;
     background-color: #EFEAE3;
 }
+.mywork{
+    height: 100%;
+    width: 100%;
+    position: relative;
+    background-color: #0b0500;
+    border-radius: 30px;
+}
 
+.work-left{
+    height: 100%;
+    width: 45%;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
+    gap: 5vw;
+    color: white;
+}
+
+.workname{
+    margin-top: 10vw;
+    margin-left: 10vw;
+    cursor: pointer;
+    font-family: "med-text";
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.workname h1{
+    font-size: 2vw;
+    color: #433C37;
+    
+}
+
+.workname h1:nth-child(1){
+    color: white;
+}
+
+.workinfo p{
+    margin-inline: 10vw;
+    font-family: "low-text";
+    font-size: 1vw;
+}
+
+.work-right{
+    width: 55%;
+    height: 100%;
+    top: 0;
+    right: 0;
+    background-color: #504B45;
+    border-radius: 30px;
+    position: absolute;
+    background-position: center;
+    background-size: cover;
+    background-image: url(https://assets-global.website-files.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15e1_Project.webp);
+}
 
 
 .page5{
     height: 60vh;
     width: 100%;
     background-color: #EFEAE3;
+}
+
+.page5 h5{
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 3vw 3vw;
+    gap: 0.3vw;
+    font-size: 1vw;
+    font-weight: lighter;
+    font-family: "low-text";
+}
+
+.page5 h5 #round{
+    height: 8px;
+    width: 8px;
+    background-color: #FE330A;
+    border-radius: 50%;
+}
+
+.swiper {
+    padding-top: 2vw;
+  }
+
+.swiper-slide {
+    text-align: center;
+    padding-inline: 3vw;
+    display: flex;
+    flex-direction: column;
+    gap: 2vw;
+    justify-content: center;
+    align-items: center;
+}
+
+.swiper-slide .content {
+    padding-block: 1.5vw ;
+    border-left: 1px solid #BFBBB5;
+    font-family: "low-text";
+    font-size: 1vw;
+
+}
+.content p{
+    padding-left: 2vw;
+    text-align: left;
+    font-weight: 50;
 }
 
 .page6{
