--- a/style.css
+++ b/style.css
@@ -887,7 +887,7 @@ footer .bot {
 .fixmenu .menutop .menu-text {
     height: 100%;
     width: 100%;
-    margin-top: 10vw;
+    margin-top: 8vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1052,7 +1052,7 @@ footer .bot {
 
     /* page2 ::::::::::::::::::::::::::::::: */
     .page2 {
-        min-height: 70vh !important;
+        min-height: 75vh !important;
         width: 100%;
         background-color: #EFEAE3;
         position: relative;
@@ -1075,7 +1075,7 @@ footer .bot {
     }
 
     .page2-bottom {
-        height: 50vh;
+        height: 60vh;
         width: 100%;
         display: flex;
         align-items: flex-start;
